# vectors

./: .gitignore  CMakeLists.txt  README.md  main.cpp  out.txt
inc/: geometry.h  geometry.hpp  visual.h  visual.hpp
src/: geometry.cpp  visual.cpp
